implemented user api and swagger doc